@@ -1,3 +1,4 @@
+#\ -s Thin
 require_relative 'src/app.rb'
 
 # Run Server
