@@ -36,6 +36,8 @@
         %h1 Start
     %main.center-menu
       %section#lesson-content.focus
+      %button#next-lesson-btn{:type => "button"}
+        %h1 Next Lesson
     %template
       - nodes.each do |node|
         = node
